# shuushuu-api

./: .dockerignore  .env.development  .env.example  .env.test  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  Dockerfile.iqdb  Dockerfile.nginx  HTTPS_DEPLOYMENT.md  MIGRATION_PERFORMANCE.md  Makefile  THIRD_PARTY_LICENSES.md  TODO.md  analyze_unmatched_comments.py  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.pytest.yml  docker-compose.test.yml  docker-compose.yml  migration_log.txt  pr_comments.json  pyproject.toml  run-tests.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  claude-review.yml  lint.yml  pr-agent.yml  test.yml
alembic/: README  env.py
alembic/versions/: 12207ec6cc9b_add_tag_sort_indexes.py  12bf25199415_add_user_tag_affinity_table.py  1332fe238741_forum_import_provenance.py  176f47a1d07f_add_refresh_tokens_table.py  18dcd44b530d_ml_tag_suggestions_status_tag_confidence_index.py  198d753671e3_add_account_lockout_fields.py  1cdaf1ec0250_status_history_report_review_fk.py  2393655e2b22_widen_ip_column_to_45_chars_for_ipv6.py  25cad69549de_merge_ml_tag_suggestions_and_source_url_.py  2696017fe1f1_ml_tag_suggestions_status_tag_id_index.py  2903e62e325f_update_default_images_per_page_15_to_20.py  2903e62e325f_update_images_preferences.py  2cd4e874e956_add_index_on_images_posts.py  2cd4e874e956_triggers_and_indices.py  2e5fae0fd9a5_add_theme_preset_and_dark_mode_to_users.py  301d283488cc_add_tag_type_flags_to_images.py  31b4f18cfd81_add_ml_tag_suggestion_tables.py  35ccc78f773a_add_parent_comment_id_with_set_null_.py  3d5cbb8566ab_add_reason_to_image_reviews.py  47b415e78d5c_add_unique_constraint_on_banners_full_.py  4a93ca80f7f6_review_reason_category.py  4f775fd5dd18_extend_orig_filename_rename_alias.py  528091e4fac9_add_position_to_tag_external_links.py  55bd585c1d8a_add_forum_tables.py  5721ccce6a85_add_fulltext_search_to_tags_title.py  68c9d8c0a3c2_add_id_primary_key_to_donations_table.py  6ad847e3bc00_add_r2_location_to_images.py  6d0cd96441f5_add_tag_cooccurrence_table.py  6f22c3978270_add_fulltext_index_to_posts_post_text.py  6f286ed3c418_add_iqdb_hash_to_images.py  6ff85692cb26_add_hide_reposts_to_users.py  7863e125095a_add_character_source_links_table.py  78fa9b978b3b_rename_sha1_password_type_from_md5.py  7998a5544aba_add_audit_trail_tables.py  79e1a49d9e90_update_perms.py  7b2101b37080_add_in_r2_to_banners.py  7c37394cf3fb_add_email_verification.py  7d98087eabcb_backfill_delete_suggestions_for_.py  81cdaeb0ff13_add_closed_by_to_image_reviews.py  832e3165122d_add_avatar_in_r2_to_users.py  (+36 more)
app/: config.py  main.py
app/api/: dependencies.py
app/core/: archived_user.py  auth.py  database.py  db_retry.py  json_response.py  logging.py  meilisearch.py  permission_cache.py  permission_deps.py  permission_sync.py  permissions.py  r2_client.py  r2_constants.py  redis.py  security.py  user_loader.py
app/models/: __init__.py  admin_action.py  ban.py  character_source_link.py  comment.py  comment_report.py  favorite.py  forum.py  generated.py  image.py  image_rating.py  image_report.py  image_report_tag_suggestion.py  image_review.py  image_status_history.py  misc.py  ml_model_version.py  ml_raw_prediction.py  ml_tag_suggestion.py  news.py  permissions.py  privmsg.py  refresh_token.py  review_vote.py  tag.py  tag_audit_log.py  tag_cooccurrence.py  tag_external_link.py  tag_history.py  tag_link.py  tag_mapping.py  tag_suggestion.py  types.py  user.py  user_session.py  user_suspension.py  user_tag_affinity.py
app/schemas/: __init__.py  admin.py  audit.py  auth.py  banner.py  base.py  comment.py  comment_report.py  common.py  donations.py  forum.py  image.py  ml_analyze.py  ml_suggestion_queue.py  ml_tag_suggestion.py  news.py  privmsg.py  report.py  search.py  tag.py  tag_suggestion.py  tag_suggestion_stats.py  taste_profile.py  url_import.py  user.py
app/services/: animetimm_model.py  animetimm_preprocess.py  avatar.py  banner.py  batch_tag.py  cloudflare.py  email.py  feed_count_cache.py  feeds.py  forum.py  image_processing.py  image_status.py  image_visibility.py  iqdb.py  ml_backfill.py  ml_categories.py  ml_raw_store.py  ml_remap.py  ml_runtime.py  ml_service.py  ml_suggestion_lifecycle.py  ml_suggestion_pipeline.py  ml_suggestion_queue.py  ml_suggestion_review.py  onnx_model.py  onnx_providers.py  r2_storage.py  rate_limit.py  rating.py  recommendations.py  repost.py  review_jobs.py  search.py  (+10 more)
data/: tag_mappings.csv
docs/: AUTHENTICATION.md  IMPLEMENTATION_EXAMPLE_EMBED_USER.md  arq-background-jobs.md  comment_search_comparison.md  creating_alembic_migrations.md  deployment.md  env-loading-unified.md  image-serving-nginx.md  log-operations.md  logging-guide.md  ml-tag-suggestions-prod-seeding.md  ml-tag-suggestions.md  permissions-migration-example.md  permissions-quickstart.md  permissions.md  production-deployment.md  r2-operations.md  ruff.md  tag-suggestion-workflow.md  test_search_performance.py
scripts/: analyze_character_sources.py  analyze_migration_performance.py  analyze_tag_distribution.py  audit_alias_parent_violations.py  backfill_tag_type_flags.py  backfill_tag_usage_counts.py  bench_feed_count.py  compare_schemas.py  convert_bbcode_to_markdown.py  create_prod_symlinks.sh  curl-examples.md  db_utils.py  demo_markdown.py  fix_prod_fk_names.sql  generate_character_mappings.py  generate_tag_mappings.py  generate_thumbnails.py  generate_variants.py  import_forum_archive.py  import_tag_mappings.py  migrate_legacy_db.py  migrate_quoted_comments.py  ml_backfill_infer.py  ml_backfill_ingest.py  ml_backfill_manifest.py  ml_gpu_infer.py  ml_raw_ingest.py  ml_remap.py  normalize_db_text.py  populate_iqdb.py  prune_inactive_users.py  r2_sync.py  reconcile_variant_status.py  refresh_tag_cooccurrence.py  refresh_user_tag_affinity.py  reindex_search.py  restore_prod_db.py  run-worker.sh  seed_test_account_activity.py  test-api.sh  (+3 more)
tests/: README.md  __init__.py  conftest.py  test_fixtures_example.py  test_permissions.py  test_request_logging.py  test_worker.py
(+353 files in other folders)
