[project]
name = "shuushuu-api"
version = "2.0.0"
description = "Modern FastAPI backend for Shuushuu anime image board"
# readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "anonymous_object", email = "admin@e-shuushuu.net"}
]

dependencies = [
    # Core Framework
    "fastapi[standard]>=0.115.0",
    # Database (MySQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0", # For Alembic sync operations
    "alembic>=1.13.0",
    # Cache & Queue
    "redis>=5.0.0",
    "arq>=0.26.0", # Simple task queue
    # Image Processing
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.0.0",
    # ASGI Server (for production)
    "uvicorn[standard]>=0.30.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    "sqlacodegen>=3.1.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    
    # Code Quality
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    
    # Type Stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "FA",  # flake8-future-annotations (enforce modern type hints)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.pyupgrade]
# Enforce Python 3.10+ type hints (use | instead of Optional)
keep-runtime-typing = false

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, external services)",
    "api: API endpoint tests",
    "slow: Slow-running tests",
]
# Coverage can be enabled when ready:
# "--cov=app",
# "--cov-report=term-missing",
# "--cov-report=html",

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
# Strict mode settings
strict = true

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "arq.*",
    "PIL.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.models.generated"
# Auto-generated SQLAlchemy models - disable strict checking
disable_error_code = ["no-untyped-call", "misc", "assignment"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.alembic]
# Alembic migration configuration
# Database URL is set dynamically in alembic/env.py from settings.DATABASE_URL_SYNC
script_location = "alembic"
# All other settings use Alembic defaults
