[project]
name = "shuushuu-api"
version = "2.0.0"
description = "Modern FastAPI backend for Shuushuu anime image board"
# readme = "README.md"
requires-python = ">=3.14"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "anonymous_object", email = "admin@e-shuushuu.net"}
]

dependencies = [
    # Core Framework
    "fastapi[standard]>=0.115.0,<=0.136.1", # cap lift: 0.122 capped starlette<0.51, pinning us to vulnerable starlette 0.50.0 (PYSEC-2026-161, fix in 1.0.1). 0.133+ supports starlette 1.0.0+; 0.136.1 is current latest.
    # Database (MySQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0,<1.2", # <1.2: pymysql 1.2.0 changed Connection.ping() signature in a way sqlalchemy's aiomysql adapter doesn't handle, causing intermittent ASGI errors when the pool revalidates a stale connection.
    "alembic>=1.13.0",
    # Cache
    "redis>=5.0.0",
    # Search
    "meilisearch-python-sdk>=3.0.0",
    # Authentication & Security
    "pyjwt<3.0.0,>=2.8.0",
    "bcrypt>=4.0.0",
    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # ASGI Server (for production)
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.27",
    "pillow>=12.3.0", # Image processing - will be needed for image operations
    "httpx[http2]>=0.27.0", # HTTP client for IQDB API requests
    # Logging
    "structlog>=24.1.0",
    # Feed generation
    "feedgenerator>=2.2.1",
    # Task queue
    "arq>=0.27.0", # Task queue for background jobs
    "aioboto3>=13.0.0",  # Async S3-compatible client for Cloudflare R2
    "aiosmtplib>=5.1.1",
    "onnxruntime>=1.26.0",  # 1.26.0 is the first release with Python 3.14 wheels
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    # Code Quality
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.5.0",
    # Type Stubs
    "types-redis>=4.6.0",
    # Security / Auditing
    "pip-audit>=2.10.0",
    "moto[s3,server]>=5.0.0",  # Mock S3 for R2 adapter tests
    "types-aioboto3>=13.0.0",  # Type stubs
    "pytest-xdist>=3.8.0",
    "rapidfuzz>=3.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"  # Updated to match requires-python
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "__pycache__",
    "alembic/versions",
    "*.egg-info",
]
extend-exclude = [
    "tests",
    "docs",
    "scripts",
    "test_*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    # "FA",  # flake8-future-annotations (enforce modern type hints)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    # "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.pyupgrade]
# Enforce Python 3.10+ type hints (use | instead of Optional)
keep-runtime-typing = false

[tool.ruff.lint.isort]
# Configure import sorting to match your project structure
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Ruff formatter configuration (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, external services)",
    "api: API endpoint tests",
    "slow: Slow-running tests",
]
# Coverage can be enabled when ready:
# "--cov=app",
# "--cov-report=term-missing",
# "--cov-report=html",

[tool.mypy]
# python_version = "3.12"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = true
# follow_imports = "normal"
# Disable pydantic plugin due to typing_extensions conflict in VS Code extension
# plugins = ["pydantic.mypy"]
# namespace_packages = true
# Strict mode settings
strict = true

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "arq.*",
    "PIL.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.models.generated"
# Auto-generated SQLAlchemy models - disable strict checking
disable_error_code = ["no-untyped-call", "misc", "assignment"]

[[tool.mypy.overrides]]
module = "tests.*"
# Exclude tests from strict type checking
ignore_errors = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.alembic]
# Alembic migration configuration
# Database URL is set dynamically in alembic/env.py from settings.DATABASE_URL_SYNC
script_location = "alembic"
# All other settings use Alembic defaults
